--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "4.17.1",
-    "sequelize": "^6.23.0",
-    "sqlite3": "^5.0.0"
+    "body-parser": "1.20.2",
+    "express": "4.18.2",
+    "sequelize": "6.37.1",
+    "sqlite3": "5.1.7"
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
     "seed": "node ./scripts/seedDb.js"
   },
   "devDependencies": {
-    "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22"
+    "concurrently": "8.2.2",
+    "eslint": "8.0.1",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-n": "15.0.0 || 16.0.0 ",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-promise": "6.0.0",
+    "nodemon": "3.0.3",
+    "prettier": "3.2.5"
   },
   "engines": {
     "node": ">=10.16.3"
