--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "seed": "node ./scripts/seedDb.js"
   },
   "dependencies": {
+    "@joi/date": "2.1.0",
     "body-parser": "1.20.2",
     "express": "4.18.2",
+    "joi": "17.12.1",
     "sequelize": "6.37.1",
     "sqlite3": "5.1.7"
   },
