--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "seed": "node ./scripts/seedDb.js",
+    "test:base": "node --max-old-space-size=8192 node_modules/.bin/jest --runInBand",
+    "test:unit": "yarn test:base --config=./test/unit/jest-unit.config.js"
   },
   "dependencies": {
     "@joi/date": "2.1.0",
@@ -23,6 +25,7 @@
     "eslint-plugin-n": "15.0.0 || 16.0.0 ",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.0.0",
+    "jest": "29.7.0",
     "nodemon": "3.0.3",
     "prettier": "3.2.5"
   },
